<resources>
    <string name="app_name">Lighting Squares</string>
    <string name="background_image">Background Image</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="highscore">Highscore</string>
    <string name="settings">Settings</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="lightning_blocks">Lightning Blocks</string>
    <string name="title_activity_game">GameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lightning_square">lightning square</string>
    <string name="level">Level</string>
    <string name="moves">Moves</string>
    <string name="_0">0</string>
    <string name="time">Time</string>
    <string name="quit">Quit</string>
    <string name="restart_level">Restart Level</string>
    <string name="score_1_image">Score 1 Image</string>
    <string name="score_2_image">Score 2 Image</string>
    <string name="score_3_image">Score 3 Image</string>
    <string name="_45">45</string>
    <string name="info_text">This is test version of the game!</string>
</resources>
