<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/levelNumberTxt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/the_girl_next_door"
        android:text="@string/_45"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/scoreImg1"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/scoreImg1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/score_1_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/scoreImg2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/levelNumberTxt"
        app:layout_constraintTop_toBottomOf="@+id/levelNumberTxt"
        app:srcCompat="@drawable/red_off" />

    <ImageView
        android:id="@+id/scoreImg2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/score_2_image"
        app:layout_constraintBottom_toBottomOf="@+id/scoreImg1"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/scoreImg3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scoreImg1"
        app:layout_constraintTop_toTopOf="@+id/scoreImg1"
        app:srcCompat="@drawable/red_off" />

    <ImageView
        android:id="@+id/scoreImg3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/score_3_image"
        app:layout_constraintBottom_toBottomOf="@+id/scoreImg2"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@+id/levelNumberTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scoreImg2"
        app:layout_constraintTop_toTopOf="@+id/scoreImg2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/red_off" />
</androidx.constraintlayout.widget.ConstraintLayout>